<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/velocidadeMaxima" />

        <TextView
            android:id="@+id/text_gps_velocidadeMaxima"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_velocidadeMaxima" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/velocidadeMedia" />

        <TextView
            android:id="@+id/text_gps_velocidadeMedia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_velocidadeMedia" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/distancia" />

        <TextView
            android:id="@+id/text_gps_distancia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_distancia" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/calorias" />

        <TextView
            android:id="@+id/text_gps_calorias"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_calorias" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/tempo" />

        <TextView
            android:id="@+id/text_gps_tempo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_tempo" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/web_service" />

        <TextView
            android:id="@+id/text_web_service"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_web_service" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_gps_velocidade"
        android:layout_width="fill_parent"
        android:layout_height="341dp"
        android:layout_weight="0.88"
        android:gravity="center|center_vertical"
        android:text="@string/calibrando"
        android:textSize="50dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <Button
            android:id="@+id/button_gps_iniciar"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iniciar"
            android:enabled="false" />
        
        <Button
            android:id="@+id/button_gps_convidar"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convidar" />
        
    </LinearLayout>

</LinearLayout>