<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label_convite_mensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem" />
    <EditText
        android:id="@+id/text_convite_mensagem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:inputType="textMultiLine" 
        android:lines="4"
        android:gravity="top" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom" >

        <Button
            android:id="@+id/button_convite_continuar"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/continuar" />

        <Button
            android:id="@+id/button_convite_cancelar"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar" />
    </LinearLayout>

</LinearLayout>